--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "3.0.1"
   },
   "devDependencies": {
+    "check-prop-types": "^1.1.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "jest-enzyme": "^7.0.2"
